fixed some bugs with alignment in each tab

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -107,8 +107,3 @@ a {
   justify-content: center;
   align-items: center;
 }
-@media only screen and (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-}
