--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,6 +17,7 @@ body {
 
 .text {
   font-size: 9vw;
+  font-weight: bold;
   letter-spacing: -.01em;
   line-height: 100%;
   margin: 0;
@@ -38,7 +39,7 @@ body {
 
 .text a{
   font-size: 8vw;
-  margin-top: -25px;
+  margin-top: -65px;
 }
 span {
   position: absolute;
@@ -139,6 +140,7 @@ nav {
 
 .socialMediaIcons ul li {
   margin: 0 12px; /* Adjust the spacing between icons */
+ color: #fff;
 }
 
 .socialMediaIcons ul li a {
@@ -175,13 +177,13 @@ nav {
   /* Instagram color */
 }
 .socialMediaIcons ul li:nth-child(6) a {
-  background: #000435
+  background: #040c65
   /* Resume color */
 }
 
 .socialMediaIcons ul li a:hover {
-  background-color: #fff; /* Change the background color on hover */
-  color: #333; /* Change the text color on hover */
+  background-color: #1d1b1b; /* Change the background color on hover */
+  color: #fff; /* Change the text color on hover */
   transform: rotate(360deg);
 }
 
@@ -211,8 +213,3 @@ footer {
   right: 0;
 }
 
-@media only screen and (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-}
