--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -5,6 +5,7 @@
   letter-spacing: 5px;
   margin-right: 10px;
   margin-bottom: 85px;
+  font-size: 35px;
 }
 .page {
     color: white;
@@ -326,8 +327,3 @@
     font-size: 20px;
   }
 
-  @media only screen and (max-width: 768px) {
-    body {
-      font-size: 14px;
-    }
-  }
