--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,8 +63,3 @@ a {
   color: inherit;
 }
 
-@media only screen and (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-}
